# NSU-learning

./: README.md
1st_term/: CMakeLists.txt
1st_term/Akinator/: akinator.c
1st_term/Boera-Mur-lab1-0/: lab1-0.c
1st_term/Calculator/: README.md
1st_term/Deikstra-lab2/: lab2.c
1st_term/lab0/: lab0.c
1st_term/quickSort/: quickSort.c
2nd Term/AVL tree/: AVL tree.c  CMakeLists.txt  functions.h
2nd_Term/: CMakeLists.txt
2nd_Term/AVL_tree/: AVL_tree.c  CMakeLists.txt  functions.h
2nd_Term/Akinator/: akinator.c  tree.h
2nd_Term/Calculator/: Calculator.c  Stack.h
2nd_Term/Huffman/: Huffman.c
2nd_Term/Kosaraju/: Kosaraju.c  Kosaraju_func.c  Kosaraju_func.h
2nd_Term/lab7-0/: Top_Sort.c  Top_sort_func.c  Top_sort_func.h
2nd_Term/lab8-0/: Graph.h  Kruskal.c
2nd_Term/lab8-1/: Prim.c  Prim_func.h  Prim_function.c  Prim_function.h
2nd_Term/lab9-0/: Graph_func.h  lab9-0.c
